[ADM-2511] Fix user info alignment

--- a/src/app/core/user/user/user.component.scss
+++ b/src/app/core/user/user/user.component.scss
@@ -27,6 +27,7 @@
       color: $grey-700;
       padding: 0 $spacing $spacing-S $spacing;
       display: flex;
+      align-items: flex-start;
       background: transparent;
       &:last-child {
         padding-bottom: 0;
